# de_interview

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: main.py
services/api/src/api/routers/: precipitation.py  temperature.py
services/api/tests/: test_api.py
services/pipelines/: Dockerfile  entrypoint.sh  prefect.yaml  pyproject.toml
services/pipelines/src/pipelines/get_temperatures/: flow.py
services/pipelines/src/pipelines/get_temperatures/config/: config.toml
