[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "httpx2==2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
